--- a/debian/indi-gphoto/control
+++ b/debian/indi-gphoto/control
@@ -2,12 +2,12 @@ Source: indi-gphoto
 Section: science
 Priority: extra
 Maintainer: Jasem Mutlaq <mutlaqja@ikarustech.com>
-Build-Depends: debhelper (>= 6), cdbs, cmake, dcraw, libindi-dev, zlib1g-dev, libusb-dev, libjpeg-dev, libcfitsio3-dev, libgphoto2-dev, libraw-dev
+Build-Depends: debhelper (>= 6), cdbs, cmake, libindi-dev, zlib1g-dev, libusb-dev, libjpeg-dev, libcfitsio3-dev, libgphoto2-dev, libraw-dev
 Standards-Version: 3.7.2
 
 Package: indi-gphoto
 Architecture: any
-Depends: ${shlibs:Depends}, ${misc:Depends}, dcraw, libindi1
+Depends: ${shlibs:Depends}, ${misc:Depends}, libindi1
 Description: INDI GPhoto (DSLR) Camera Driver.
  .
  This driver is compatible with any INDI client such as KStars or Xephem.  The driver can operate any camera supported by GPhoto2.
