indi-asi: udev rules for filter wheel are now in seperate file => Added it to CMakeLists.txt

--- a/3rdparty/indi-asi/CMakeLists.txt
+++ b/3rdparty/indi-asi/CMakeLists.txt
@@ -86,3 +86,4 @@ install(TARGETS indi_asi_ccd RUNTIME DESTINATION bin)
 install(TARGETS indi_asi_wheel RUNTIME DESTINATION bin)
 install(FILES ${CMAKE_CURRENT_BINARY_DIR}/indi_asi.xml DESTINATION ${INDI_DATA_DIR})
 install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/99-asi.rules DESTINATION ${UDEVRULES_INSTALL_DIR})
+install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/99-efw.rules DESTINATION ${UDEVRULES_INSTALL_DIR})
