Add notifyconfig to dependencies

--- a/debian/kstars/control
+++ b/debian/kstars/control
@@ -21,6 +21,7 @@ Build-Depends: cmake,
                libkf5xmlgui-dev,
                libkf5plotting-dev,
                libkf5crash-dev,
+               libkf5notifyconfig-dev,
                libeigen3-dev,
                zlib1g-dev,
                libcfitsio3-dev (>= 3.040),
