--- a/3rdparty/indi-mgen/CMakeLists.txt
+++ b/3rdparty/indi-mgen/CMakeLists.txt
@@ -12,7 +12,8 @@ set(INDI_MGENAUTOGUIDER_VERSION_MINOR 1)
 
 find_package(INDI REQUIRED)
 find_package(ZLIB REQUIRED)
-FIND_PACKAGE(Nova REQUIRED)
+find_package(LibFTDI1 REQUIRED)
+find_package(USB-1 REQUIRED)
 find_package(Threads REQUIRED)
 
 configure_file(${CMAKE_CURRENT_SOURCE_DIR}/config.h.cmake ${CMAKE_CURRENT_BINARY_DIR}/config.h )
@@ -21,7 +22,8 @@ configure_file(${CMAKE_CURRENT_SOURCE_DIR}/indi_mgenautoguider.xml.cmake ${CMAKE
 include_directories(${CMAKE_CURRENT_BINARY_DIR})
 include_directories(${CMAKE_CURRENT_SOURCE_DIR})
 include_directories(${INDI_INCLUDE_DIR})
-include_directories(${NOVA_INCLUDE_DIR})
+include_directories(${LIBFTDI_INCLUDE_DIRS})
+include_directories(${LIBUSB_1_INCLUDE_DIRS})
 
 ########### MGenAutoguider ###########
 set(indimgenautoguider_SRCS
@@ -30,7 +32,7 @@ set(indimgenautoguider_SRCS
 
 add_executable(indi_mgenautoguider ${indimgenautoguider_SRCS})
 
-target_link_libraries(indi_mgenautoguider ${INDI_DRIVER_LIBRARIES} ${NOVA_LIBRARIES} pthread)
+target_link_libraries(indi_mgenautoguider ${INDI_DRIVER_LIBRARIES} ${LIBFTDI_LIBRARIES} ${LIBUSB_1_LIBRARIES} pthread)
 
 install(TARGETS indi_mgenautoguider RUNTIME DESTINATION bin )
 
