--- a/debian/kstars/control
+++ b/debian/kstars/control
@@ -24,7 +24,7 @@ Build-Depends: cmake,
                libkf5notifyconfig-dev,
                libeigen3-dev,
                zlib1g-dev,
-               libcfitsio3-dev (>= 3.040),
+               libcfitsio3-dev | libcfitsio-dev,
                libnova-dev,
                libindi-dev (>= 1.3.1),
                indi-bin (>= 1.3.1),
