Build updates for 1.4.0

--- a/3rdparty/generic-ccd/CMakeLists.txt
+++ b/3rdparty/generic-ccd/CMakeLists.txt
@@ -22,18 +22,14 @@ include_directories( ${INDI_INCLUDE_DIR})
 include_directories( ${CFITSIO_INCLUDE_DIR})
 
 ############# GENERIC CCD ###############
-if (CFITSIO_FOUND)
-
 set(genericccd_SRCS
 	${CMAKE_CURRENT_SOURCE_DIR}/generic_ccd.cpp
 )
 
 add_executable(indi_generic_ccd ${genericccd_SRCS})
 
-target_link_libraries(indi_generic_ccd ${INDI_DRIVER_LIBRARIES} ${CFITSIO_LIBRARIES} m ${ZLIB_LIBRARY})
+target_link_libraries(indi_generic_ccd ${INDI_LIBRARIES} ${CFITSIO_LIBRARIES} m ${ZLIB_LIBRARY})
 
 install(TARGETS indi_generic_ccd RUNTIME DESTINATION bin)
-
-endif (CFITSIO_FOUND)
 
 install(FILES ${CMAKE_CURRENT_BINARY_DIR}/indi_generic_ccd.xml DESTINATION ${INDI_DATA_DIR})
