--- a/3rdparty/indi-fli/CMakeLists.txt
+++ b/3rdparty/indi-fli/CMakeLists.txt
@@ -31,7 +31,7 @@ set(flipdf_SRCS
 
 add_executable(indi_fli_focus ${flipdf_SRCS})
 
-target_link_libraries(indi_fli_focus ${INDI_DRIVER_LIBRARIES} ${FLI_LIBRARIES} ${M_LIB} ${ZLIB_LIBRARY})
+target_link_libraries(indi_fli_focus ${INDI_LIBRARIES} ${FLI_LIBRARIES} ${M_LIB} ${ZLIB_LIBRARY})
 
 install(TARGETS indi_fli_focus RUNTIME DESTINATION bin )
 
@@ -42,7 +42,7 @@ set(flicfw_SRCS
 
 add_executable(indi_fli_wheel ${flicfw_SRCS})
 
-target_link_libraries(indi_fli_wheel ${INDI_DRIVER_LIBRARIES} ${FLI_LIBRARIES} ${M_LIB} ${ZLIB_LIBRARY})
+target_link_libraries(indi_fli_wheel ${INDI_LIBRARIES} ${FLI_LIBRARIES} ${M_LIB} ${ZLIB_LIBRARY})
 
 install(TARGETS indi_fli_wheel RUNTIME DESTINATION bin )
 ############# FLI CCD ###############
@@ -52,7 +52,7 @@ set(fliccd_SRCS
 
 add_executable(indi_fli_ccd ${fliccd_SRCS})
 
-target_link_libraries(indi_fli_ccd ${INDI_DRIVER_LIBRARIES} ${FLI_LIBRARIES} ${CFITSIO_LIBRARIES} ${M_LIB} ${ZLIB_LIBRARY})
+target_link_libraries(indi_fli_ccd ${INDI_LIBRARIES} ${FLI_LIBRARIES} ${CFITSIO_LIBRARIES} ${M_LIB} ${ZLIB_LIBRARY})
 
 install(TARGETS indi_fli_ccd RUNTIME DESTINATION bin)
 
