--- a/3rdparty/indi-gige/CMakeLists.txt
+++ b/3rdparty/indi-gige/CMakeLists.txt
@@ -32,8 +32,8 @@ if (CFITSIO_FOUND)
 
 add_executable(indi_gige_ccd ${GIGE_SRCS})
 
-#target_link_libraries(indi_gige_ccd ${INDI_DRIVER_LIBRARIES} ${CFITSIO_LIBRARIES} m ${ZLIB_LIBRARY} ${GLIB2_LIBRARY} ${ARV_LIBRARY})
-target_link_libraries(indi_gige_ccd ${INDI_DRIVER_LIBRARIES} ${GLIB2_LIBRARIES} ${Arv_LIBRARIES} ${CFITSIO_LIBRARIES} m gobject-2.0 ${ZLIB_LIBRARY})
+#target_link_libraries(indi_gige_ccd ${INDI_LIBRARIES} ${CFITSIO_LIBRARIES} m ${ZLIB_LIBRARY} ${GLIB2_LIBRARY} ${ARV_LIBRARY})
+target_link_libraries(indi_gige_ccd ${INDI_LIBRARIES} ${GLIB2_LIBRARIES} ${Arv_LIBRARIES} ${CFITSIO_LIBRARIES} m gobject-2.0 ${ZLIB_LIBRARY})
 
 install(TARGETS indi_gige_ccd RUNTIME DESTINATION bin)
 
