--- a/3rdparty/indi-ssag/CMakeLists.txt
+++ b/3rdparty/indi-ssag/CMakeLists.txt
@@ -27,7 +27,7 @@ ${CMAKE_CURRENT_SOURCE_DIR}/openssag.cpp )
 
 add_executable(indi_ssag_ccd ${indissag_SRCS})
 
-target_link_libraries(indi_ssag_ccd ${INDI_DRIVER_LIBRARIES} ${CFITSIO_LIBRARIES} ${LIBUSB_1_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT})
+target_link_libraries(indi_ssag_ccd ${INDI_LIBRARIES} ${CFITSIO_LIBRARIES} ${LIBUSB_1_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT})
 
 if (CMAKE_HOST_SYSTEM_PROCESSOR MATCHES "arm*")
 target_link_libraries(indi_ssag_ccd rt)
