--- a/3rdparty/indi-mi/CMakeLists.txt
+++ b/3rdparty/indi-mi/CMakeLists.txt
@@ -44,7 +44,7 @@ set(indi_miccd_SRCS
 
 add_executable(indi_mi_ccd ${indi_miccd_SRCS})
 
-target_link_libraries(indi_mi_ccd ${INDI_DRIVER_LIBRARIES} ${CFITSIO_LIBRARIES}
+target_link_libraries(indi_mi_ccd ${INDI_LIBRARIES} ${CFITSIO_LIBRARIES}
                       ${MILIB} ${LIBUSB_1_LIBRARIES} rt)
 
 if(THREADS_HAVE_PTHREAD_ARG)
