Fix warning and move GSL stuff to main CMakelists.txt

--- a/libindi/CMakeLists.txt
+++ b/libindi/CMakeLists.txt
@@ -212,6 +212,10 @@ find_package(CFITSIO REQUIRED)
 find_package(Nova REQUIRED)
 find_package(USB-1 REQUIRED)
 find_package(CURL REQUIRED)
+find_package(GSL REQUIRED)
+if (APPLE)
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -L/usr/local/lib")
+endif()
 # libjpeg for V4L2
 if (${CMAKE_SYSTEM_NAME} MATCHES "Linux")
   find_package(JPEG REQUIRED)
@@ -225,7 +229,8 @@ include_directories( ${CMAKE_CURRENT_SOURCE_DIR}/libs)
 include_directories( ${CMAKE_CURRENT_SOURCE_DIR}/libs/indibase)
 include_directories( ${CFITSIO_INCLUDE_DIR})
 include_directories( ${NOVA_INCLUDE_DIR})
-include_directories(${LIBUSB_1_INCLUDE_DIRS})
+include_directories( ${LIBUSB_1_INCLUDE_DIRS})
+include_directories( ${GSL_INCLUDE_DIRS})
 if (${CMAKE_SYSTEM_NAME} MATCHES "Linux")
 include_directories( ${CMAKE_CURRENT_SOURCE_DIR}/libs/webcam)
   include_directories( ${JPEG_INCLUDE_DIR} )
