Make INDI compile on Cygwin

--- a/3rdparty/indi-eqmod/CMakeLists.txt
+++ b/3rdparty/indi-eqmod/CMakeLists.txt
@@ -16,6 +16,10 @@ find_package(GSL REQUIRED)
 set(EQMOD_VERSION_MAJOR 0)
 set(EQMOD_VERSION_MINOR 3)
 
+if (CYGWIN)
+add_definitions(-U__STRICT_ANSI__)
+endif(CYGWIN)
+
 option(WITH_ALIGN "Enable Alignment Subsystem" ON)
 option(WITH_ALIGN_GEEHALEL "Enable EQMod Alignment" ON)
 option(WITH_SIMULATOR "Enable Simulator" ON)
@@ -59,7 +63,11 @@ endif(WITH_SCOPE_LIMITS)
 add_executable(indi_eqmod_telescope ${eqmod_SRCS})
 
 if(WITH_ALIGN)
+if (CYGWIN)
+target_link_libraries(indi_eqmod_telescope ${INDI_LIBRARIES} ${NOVA_LIBRARIES} ${INDI_ALIGN_LIBRARIES} ${GSL_LIBRARIES} ${ZLIB_LIBRARY})
+else()
 target_link_libraries(indi_eqmod_telescope ${INDI_LIBRARIES} ${NOVA_LIBRARIES} ${INDI_ALIGN_LIBRARIES})
+endif(CYGWIN)
 else(WITH_ALIGN)
   target_link_libraries(indi_eqmod_telescope ${INDI_LIBRARIES} ${NOVA_LIBRARIES})
 endif(WITH_ALIGN)
