--- a/debian/kstars/control
+++ b/debian/kstars/control
@@ -29,7 +29,8 @@ Build-Depends: cmake,
                libindi-dev (>= 1.3.1),
                indi-bin (>= 1.3.1),
                wcslib-dev,
-               libraw-dev
+               libraw-dev,
+               libgsl-dev
 Standards-Version: 3.9.3
 Homepage: http://edu.kde.org/
 
