--- a/debian/kstars/control
+++ b/debian/kstars/control
@@ -26,8 +26,8 @@ Build-Depends: cmake,
                zlib1g-dev,
                libcfitsio3-dev | libcfitsio-dev,
                libnova-dev,
-               libindi-dev (>= 1.3.1),
-               indi-bin (>= 1.3.1),
+               libindi-dev (>= 1.4.0),
+               indi-bin (>= 1.4.0),
                wcslib-dev,
                libraw-dev,
                libgsl-dev
@@ -39,7 +39,7 @@ Architecture: any
 Section: science
 conflicts: kstars
 replaces: kstars
-Depends: ${shlibs:Depends}, ${misc:Depends}, kstars-bleeding-data (>= ${source:Version}), kded5, kinit, libindi1, indi-bin, breeze-icon-theme, oxygen-icon-theme
+Depends: ${shlibs:Depends}, ${misc:Depends}, kstars-bleeding-data (>= ${source:Version}), kded5, kinit, libindi1, indi-bin, breeze-icon-theme
 Description: desktop planetarium for KDE
  KStars is a desktop planetarium for KDE, depicting an accurate graphical
  simulation of the night sky, from any location on Earth, at any date and time.
